Fix issue with plural names of types and _GENERIC_RE
